--- a/src/components/Lightbox/Lightbox.scss
+++ b/src/components/Lightbox/Lightbox.scss
@@ -19,11 +19,10 @@
 }
 
 .lightbox-body {
-  @include flexCol;
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flexColCenter;
+  @include flexOn;
+  @include fullWidth;
+  @include fullHeight;
   overflow: hidden;
 }
 
