CSS fixes for PDF files. Filetype widget fixes for reload.

--- a/src/components/Inspector/Pdf.scss
+++ b/src/components/Inspector/Pdf.scss
@@ -5,6 +5,7 @@
   @include flexAlignItemsCenter;
   @include flexJustifyCenter;
   @include flexOn;
+  width: 100%;
 
   position: relative;
   img.loading {
