Fix timecode font chaging weight while zooming video [Finishes #151467221]

--- a/src/components/Inspector/Video.scss
+++ b/src/components/Inspector/Video.scss
@@ -194,6 +194,7 @@
     font-weight: 100;
     font-style: normal;
     font-stretch: normal;
+    -webkit-font-smoothing: subpixel-antialiased;
   }
 
   .Video-remaining {
