Switch to HTML 5 <video> with fallback extensions.
Re-run shrinkwrap for removed package & add some shrinkwrap documentation

Factor the video start/stop playing, use requestAnimationFrame() instead of interval for timeline updates

Off-by-one

Delete README turds

Fix for console error when hitting ESC while a video is playing

Remove mounted flag.

--- a/src/components/Inspector/PanZoom.scss
+++ b/src/components/Inspector/PanZoom.scss
@@ -9,6 +9,7 @@
 .PanZoom {
   @include flexCol;
   @include flexOn;
+  @include flexJustifyCenter;
   overflow: hidden;
   position: relative;
   cursor: move; /* fallback if grab cursor is unsupported */
