--- a/src/components/Preferences/Preferences.scss
+++ b/src/components/Preferences/Preferences.scss
@@ -4,8 +4,7 @@
   overflow: auto;
   max-height: 95vh;
 
-  .dark & { background-color: $zorroa-mattblack
-  ; }
+  .dark & { background-color: $zorroa-mattblack; }
 
   .Preferences-header {
     text-transform: uppercase;
