--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -1,6 +1,6 @@
 @import '../../styles/core-mixins.scss';
 
-.Vid {
+.Video {
   @include fullWidth;
   @include fullHeight;
   // @include flexOn;
@@ -16,7 +16,7 @@
     object-position: center center; // needed for Chrome when window is narrower aspect than video
   }
 
-  .Vid-player {
+  .Video-player {
     width: 100%;
     height: 100%;
     max-width: 100%;
