--- a/src/components/Inspector/VideoRange.scss
+++ b/src/components/Inspector/VideoRange.scss
@@ -6,55 +6,77 @@
 
 .VideoRange-clip {
   position: relative;
-  height: 30px;
+  height: 36px;
   @include fullWidth;
   @include flexRow;
   //background-color: yellow;
 }
 
 .VideoRange-clip-range {
-  //background-color: red;
+  position: absolute;
   @include fullHeight;
-  @include fullWidth;
+  border: 1px solid $zorroa-sickly-green;
 }
 
 .VideoRange-clip-range-left {
   position: absolute;
+  top: -1px;      // WHy is this needed to align to the parent div?
+  left: -10px;
+  width: 10px;
+  height: 36px;
   cursor: ew-resize;
-  width: 5px;
-  @include fullHeight;
-  border-radius: 2px;
-  background-color: $zorroa-golden-yellow;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  background-color: $zorroa-sickly-green;
+  border: 1px solid $zorroa-sickly-green;
   &:hover { background-color: lightyellow; }
 }
 
 .VideoRange-clip-range-right {
   position: absolute;
+  top: -1px;
+  right: -10px;
+  width: 10px;
+  height: 36px;
   cursor: ew-resize;
-  width: 5px;
-  @include fullHeight;
-  border-radius: 2px;
-  background-color: $zorroa-golden-yellow;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  background-color: $zorroa-sickly-green;
+  border: 1px solid $zorroa-sickly-green;
   &:hover { background-color: lightyellow; }
 }
 
 .VideoRange-clip-playhead {
-  width: 16px;
-  height: 16px;
-  border-radius: 8px;
+  width: 1px;
   position: absolute;
   top: 0;
   bottom: 0;
-  margin-left: -6px;
-  margin-top: auto;
-  margin-bottom: auto;
   cursor: ew-resize;
+}
+
+.VideoRange-clip-playhead-marker {
+  width: 1px;
+  height: 18px;
   background-color: $zorroa-navy-blue;
-  &:hover { background-color: $zorroa-water-blue; }
+}
+
+.VideoRange-clip-playhead-timecode {
+  position: absolute;
+  bottom: 3px;
+  left: -40px;
+  width: 80px;
+  text-align: center;
+  background-color: rgba(40,40,40,0.7);
+  border-radius: 3px;
+  font-weight: 400;
+  font-size: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  &:hover { background-color: $zorroa-nearblack; }
 }
 
 .VideoRange-movie {
-  height: 30px;
+  height: 26px;
   @include fullWidth;
   position: relative;
 }
@@ -66,10 +88,10 @@
 }
 
 .VideoRange-movie-thumb-marker {
-  width: 3px;
-  max-width: 3px;
-  min-width: 3px;
-  min-height: 10px;
+  width: 1px;
+  max-width: 1px;
+  min-width: 1px;
+  min-height: 26px;
   @include flexOn;
   background-color: $zorroa-water-blue;
 }
@@ -131,6 +153,6 @@
 .VideoRange-bar-clip {
   position: absolute;
   height: 100%;
-  border-left: 1px dotted $zorroa-golden-yellow;
-  border-right: 1px dotted $zorroa-golden-yellow;
+  border-left: 1px dotted $zorroa-sickly-green;
+  border-right: 1px dotted $zorroa-sickly-green;
 }
