--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -23,3 +23,12 @@
     max-height: 100%;
   }
 }
+
+.Video-loading {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
