--- a/src/components/ResizableWindow/ResizableWindow.scss
+++ b/src/components/ResizableWindow/ResizableWindow.scss
@@ -5,13 +5,13 @@
   border-radius: 3px;
   overflow: hidden;
   position: absolute; // Expects absolute top, left, width, height set externally
+  background-color: $zorroa-nearblack;
 }
 
 .ResizableWindow-header {
   @include flexRow;
   @include flexJustifySpaceBetween;
   @include flexAlignItemsCenter;
-  background-color: black;
   min-height: 38px;
   cursor: move;
 }
