CreateFolder dialog: hide modes when creating a folder; style tweaks
Add unique classnames to the search/launchpad buttons, for Selenium
Use cursor pointer for the search/launchpad buttons

--- a/src/components/Folders/CreateFolder.scss
+++ b/src/components/Folders/CreateFolder.scss
@@ -188,6 +188,7 @@
 .CreateFolder-mode {
   padding: 4px 8px;
   border: 1px solid $zorroa-lightgray;
+  cursor: pointer;
 
   &:first-child {
     border-top-left-radius: 3px;
