EVI-41 Separate table columns and add shifting and settings.
EVI-41 Implement table layouts. Remove tableFields and tableFieldWidth from app state.

Tweak styling of headers and scrollbars.

Disable context menu and settings cog if updateFieldsFn is invalid.

Refactor Table to minimize changes. Add TableContextMenu component.

Fixes for review comments.

Fix workspace test due to reducer bug.

Fix table tests due to missing state default for table field list.

Fixing review comments.

--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -19,6 +19,7 @@ https://app.zeplin.io/project.html#pid=57c999e39adaa8120388fa9a&styleguide
 */
 
 $zorroa-greyish-brown  : #4d4948;
+$zorroa-blackish-brown : #201E1D;
 $zorroa-black          : #1f1a17;
 $zorroa-white          : #e1e1e1;
 $zorroa-avocado-green  : #82a626;
