--- a/src/components/Suggestions/Suggestions.scss
+++ b/src/components/Suggestions/Suggestions.scss
@@ -106,6 +106,19 @@
 
 // Magnifying glass
 .Suggestions-search-button {
+  height: 100%;
+  border-radius: 3px;
+}
+
+.Suggestions-search-button-label {
+  text-transform: uppercase;
+  font-size: 12px;
+  margin-left: 4px;
+
+  .Suggestions.clear & { display: none; }
+}
+
+.Suggestions-search-button-body {
   @include fullHeight;
   @include flexRowCenter;
   font-size: 14px;
@@ -117,12 +130,4 @@
   &:hover { color: $zorroa-gray; }
 
   .Suggestions.clear & { padding: 0; color: $zorroa-gray; background-color: transparent; }
-}
-
-.Suggestions-search-button-label {
-  text-transform: uppercase;
-  font-size: 12px;
-  margin-left: 4px;
-
-  .Suggestions.clear & { display: none; }
 }
