--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -4,7 +4,7 @@
   @include flexOff;
   @include flexCol;
 
-  position: relative; // for Table-settings
+  position: relative; // for Table-settings and context menu
 
   // height is defined in JSX
 
@@ -20,8 +20,8 @@ $tableResizeRightPadding: 20px;
   position: absolute; // Allow width to respect children not parent (enable horiz scrolling)
   // height is defined in JSX
   min-width: 100%;
-  background-color: #fff;
-  .dark & { background-color: $zorroa-greyish-brown; }
+  background-color: white;
+  .dark & { background-color: black; }
 
   padding-right: $tableResizeRightPadding;
 
@@ -30,11 +30,6 @@ $tableResizeRightPadding: 20px;
 .Table-header-cell {
   height: 100%;
   @include flexRowCenter;
-
-  &.hovered {
-    background-color: $zorroa-nearwhite;
-    .dark & { background-color: $zorroa-darkgray; }
-  }
 }
 
 .Table-header-sort {
@@ -108,6 +103,7 @@ $tableResizeRightPadding: 20px;
   width: 100%;
   position: relative;
   overflow: auto;
+  &::-webkit-scrollbar { width: 5px; }
 }
 
 .Table-body {
@@ -143,8 +139,8 @@ $tableResizeRightPadding: 20px;
     .dark & { background-color: $zorroa-mattblack; }
   }
   &.isSelected {
-    background-color: $zorroa-selected;
-    .dark & { background-color: $zorroa-dark-selected; }
+    color: $zorroa-nearblack;
+    .dark & { color: $zorroa-nearwhite; }
   }
 }
 
@@ -157,7 +153,7 @@ $tableResizeRightPadding: 20px;
   color: $zorroa-gray;
 }
 
-.Table-body .Table-row:hover {
+.Table-body .Table-row:hover:not(.isSelected) {
   background-color: $zorroa-hover;
   .dark & { background-color: $zorroa-dark-hover; }
 }
@@ -166,7 +162,6 @@ $tableResizeRightPadding: 20px;
   text-align: left;
   font-size: 14px;
   font-family: Roboto;
-  cursor: default;
   color: $zorroa-whitegray;
 
   &.dark { color: $zorroa-whitegray; }
@@ -206,6 +201,10 @@ $tableResizeRightPadding: 20px;
     color: black;
     .dark & { color: white; }
   }
+  .Table-header-cell:hover & {
+     color: $zorroa-darkgray;
+     .dark & { color: $zorroa-lightgray; }
+  }
 }
 
 .Table-title-tail {
@@ -218,4 +217,77 @@ $tableResizeRightPadding: 20px;
   font-family: Roboto Condensed;
   color: $zorroa-lightgray;
   margin-left: 4px;
+}
+
+.Table-settings {
+  position: absolute;
+  right: 4px;
+  top: 0;
+  color: $zorroa-gray;
+  height: 26px;
+  padding: 5px 0 5px 2px;
+  background-color: white;
+  .dark & { background-color: black; }
+  &:hover { color: $zorroa-sickly-green; }
+}
+
+.Table-context-menu {
+  @include flexCol;
+  background-color: white;
+  color: $zorroa-greyish-brown;
+  box-shadow: 0 0 4px 4px rgba(0,0,0,0.15);
+  .dark & {
+    background-color: $zorroa-mattblack;
+    color: $zorroa-whitegray;
+    box-shadow: 0 0 4px 4px rgba(0,0,0,0.45);
+  }
+  border-radius: 3px;
+  position: fixed;
+  top: 24px;
+  left: 28px;
+  z-index: 1000;
+}
+
+
+.Table-context-item {
+  @include flexRow;
+  @include nowrap;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  font-size: 14px;
+  &.disabled {
+    color: $zorroa-lightgray;
+    .dark & { color: $zorroa-darkgray; }
+  }
+  &:not(:last-child) {
+    border-bottom: 2px solid $zorroa-lightgray;
+    .dark & { border-bottom: 2px solid $zorroa-darkgray}
+  }
+  &:hover:not(.disabled) {
+    background-color: $zorroa-nearwhite;
+    .dark & { background-color: $zorroa-nearblack; }
+  }
+}
+
+.Table-context-icon {
+  font-size: 18px;
+  padding-right: 8px;
+  padding-left: 8px;
+}
+
+.Table-context-label {
+  padding-right: 8px;
+}
+
+.Table-context-background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: transparent;
+  box-sizing: border-box;
 }
