EVI-16: Ensure thumbnails cover the entire container

--- a/src/components/Thumb/Thumb.scss
+++ b/src/components/Thumb/Thumb.scss
@@ -2,6 +2,7 @@
 
 .ImageThumb {
   background: no-repeat center;
+  background-size: cover;
   background-origin: border-box;
 
   position: absolute;
