--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -108,18 +108,21 @@
   margin-bottom: 10px;
   max-width: 500px;
   border-radius: 3px;
-  box-shadow: 0 2px 4px 4px rgba(128,128,128,.25);
+  box-shadow: 0 5px 20px 5px #000000;
   color: white;
-  background-color: rgba(128,128,128,0.75);
-  .dark & { background-color: rgba(0,0,0,0.75) }
+  background-color: rgba(0,0,0,0.8);
   padding: 0 10px;
 
   width: auto;
-  height: 45px;
+  height: 40px;
 
   @include flexRow;
   @include flexAlignItemsCenter;
   @include flexJustifySpaceBetween;
+
+  > * {
+      height: 100%;
+  }
 
   button:disabled {
     color: $zorroa-darkgray;
@@ -139,30 +142,9 @@
   position: relative;
   padding-left: 8px;
   padding-right: 8px;
-  border-left: 1px solid $zorroa-gray;
-  border-right: 1px solid $zorroa-gray;
-  .dark & {
-    border-left: 1px solid $zorroa-dimgray;
-    border-right: 1px solid $zorroa-dimgray;
-  }
+  border-left: 1px solid $zorroa-dimgray;
+  border-right: 1px solid $zorroa-dimgray;
   @include flexRowCenter;
-
-  .thumb-layout-button {
-    width: 30px;
-    height: 30px;
-    font-size: 20px;
-    cursor: pointer;
-    color: white;
-    border-radius: 3px;
-    @include flexRowCenter;
-
-    &:not(.thumb-layout-enabled):hover { color: $zorroa-hover-green; }
-  }
-
-  .thumb-layout-enabled {
-    &:not(.dark) { background-color: rgba(96,96,96,0.75)}
-    color: $zorroa-sickly-green;
-  }
 }
 
 .Assets-tableResize {
@@ -174,54 +156,47 @@
   z-index: 1;
 }
 
+.Footer__icon {
+  color: #aaa;
+  width: 30px;
+  height: 30px;
+  border: 0;
+  outline: 0;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 3px;
+  @include flexRowCenter;
+
+  &:focus,
+  &:hover {
+    color: $zorroa-hover-green;
+  }
+}
+
+.Footer__icon--enabled {
+  color: $zorroa-sickly-green;
+  background-color: rgba(96,96,96,0.75);
+
+  &:focus,
+  &:hover {
+    color: darken($zorroa-sickly-green, 15%);
+  }
+}
+
 .TableToggle {
   padding-left: 8px;
-  border-left: 1px solid $zorroa-gray;
-
-  .TableToggle-button {
-    color: white;
-    width: 30px;
-    height: 30px;
-    border: none;
-    outline: none;
-    font-size: 20px;
-    cursor: pointer;
-    border-radius: 3px;
-    @include flexRowCenter;
-    &:hover { color: $zorroa-hover-green; }
-  }
-
-  .TableToggle-enabled {
-    color: $zorroa-sickly-green;
-    &:hover { color: darken($zorroa-sickly-green, 15%); }
-    &:not(.dark) { background-color: rgba(96,96,96,0.75)}
-  }
-
+  border-left: 1px solid $zorroa-darkgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .MultipageToggle {
   @include flexRowCenter;
 
-  color: white;
-  width: 30px;
-  height: 30px;
-  border-radius: 3px;
-  border: none;
-  outline: none;
-  font-size: 18px;
-  cursor: pointer;
   padding: 4px 8px;
   margin-right: 8px;
-
   transform: scaleX(-1) rotate(90deg);
-
-  &:hover { color: $zorroa-sickly-green; }
-
-  &.MultipageToggle-enabled {
-    color: $zorroa-sickly-green;
-    &:hover { color: $zorroa-hover-green; }
-    &:not(.dark) { background-color: rgba(96,96,96,0.75)}
-  }
 }
 
 // TODO: factor this into a generic message dialog
