--- a/src/components/Lightbox/Lightbox.scss
+++ b/src/components/Lightbox/Lightbox.scss
@@ -29,14 +29,21 @@
 .Lightbox-metadata-title {
   @include flexRowCenter;
   align-self: center;
-  font-size: 12px;
-  color: $zorroa-gray;
-  margin: 8px;
+  font-size: 14px;
 
   div[class^="icon-"]:before {
     margin-right: 8px;
     margin-left: 4px;
     font-size: 16px;
-    color: $zorroa-gray;
+    color: #fff;
   }
+}
+
+.Lightbox__metadata-icon {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
 }
