--- a/src/components/ResizableWindow/ResizableWindow.scss
+++ b/src/components/ResizableWindow/ResizableWindow.scss
@@ -5,15 +5,16 @@
   border-radius: 3px;
   overflow: hidden;
   position: absolute; // Expects absolute top, left, width, height set externally
-  background-color: $zorroa-nearblack;
 }
 
 .ResizableWindow-header {
   @include flexRow;
   @include flexJustifySpaceBetween;
   @include flexAlignItemsCenter;
-  min-height: 38px;
+  min-height: 30px;
+  background: rgba(0, 0, 0, .8);
   cursor: move;
+  color: #fff;
 }
 
 .ResizableWindow-title {
@@ -23,14 +24,14 @@
 }
 
 .ResizableWindow-close {
-  @include zorroa-square-btn-lighten(24px);
+  @include zorroa-square-btn-lighten(30px);
   color: white;
-  margin: 8px;
 }
 
 .ResizableWindow-body {
   height: 100%;
   max-height: 100%;
+  background-color: $zorroa-nearblack;
 }
 
 .ResizeableWindow-handle {
