--- a/src/components/Inspector/Inspector.scss
+++ b/src/components/Inspector/Inspector.scss
@@ -6,7 +6,7 @@
   @include flexOn;
   @include flexColCenter;
 
-  padding: 8px;
+  padding: 0; // Note this value also needs to be reflected in the PanZoom component
   display: flex;
   justify-content: center;
   align-items: center;
