--- a/src/components/Lightbox/Lightbar.scss
+++ b/src/components/Lightbox/Lightbar.scss
@@ -5,12 +5,13 @@
   @include flexRow;
   @include flexJustifySpaceBetween;
 
-  position: relative;
+  position: fixed;
   color: white;
-  background-color: black;
+  background-color: rgba(0, 0, 0, .8);
   justify-content: space-between;
   width: 100%;
   min-height: 42px;
+  z-index: 1;
 }
 
 .Lightbar__settings {
