--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?f980lw');
-  src:  url('fonts/zorroa-icons.eot?f980lw#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?f980lw') format('woff2'),
-    url('fonts/zorroa-icons.ttf?f980lw') format('truetype'),
-    url('fonts/zorroa-icons.woff?f980lw') format('woff'),
-    url('fonts/zorroa-icons.svg?f980lw#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?9int5n');
+  src:  url('fonts/zorroa-icons.eot?9int5n#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?9int5n') format('woff2'),
+    url('fonts/zorroa-icons.ttf?9int5n') format('truetype'),
+    url('fonts/zorroa-icons.woff?9int5n') format('woff'),
+    url('fonts/zorroa-icons.svg?9int5n#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,6 +25,54 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-box3:before {
+  content: "\e97d";
+}
+.icon-archive2:before {
+  content: "\e982";
+}
+.icon-box:before {
+  content: "\e982";
+}
+.icon-external:before {
+  content: "\e97f";
+}
+.icon-group2:before {
+  content: "\e983";
+}
+.icon-crop_free:before {
+  content: "\e3c2";
+}
+.icon-add_circle:before {
+  content: "\e986";
+}
+.icon-location_searching:before {
+  content: "\e976";
+}
+.icon-settings_backup_restore:before {
+  content: "\e92f";
+}
+.icon-grid2:before {
+  content: "\e980";
+}
+.icon-list:before {
+  content: "\e97e";
+}
+.icon-square-minus:before {
+  content: "\e969";
+}
+.icon-square-plus:before {
+  content: "\e968";
+}
+.icon-search2:before {
+  content: "\e962";
+}
+.icon-plus2:before {
+  content: "\e928";
+}
+.icon-database-download:before {
+  content: "\e989";
+}
 .icon-table-freeze:before {
   content: "\e99d";
 }
@@ -92,25 +140,25 @@
   content: "\e990";
 }
 .icon-circle-add .path1:before {
-  content: "\e98a";
+  content: "\e98c";
   color: rgb(255, 255, 255);
 }
 .icon-circle-add .path2:before {
-  content: "\e98b";
+  content: "\e9ab";
   margin-left: -1em;
   color: rgb(115, 182, 28);
 }
 .icon-circle-remove .path1:before {
-  content: "\e989";
+  content: "\e98b";
   color: rgb(255, 255, 255);
 }
 .icon-circle-remove .path2:before {
-  content: "\e98c";
+  content: "\e9ac";
   margin-left: -1em;
   color: rgb(206, 45, 63);
 }
 .icon-eye-crossed2:before {
-  content: "\e987";
+  content: "\e98a";
 }
 .icon-exists:before {
   content: "\e97c";
@@ -130,7 +178,7 @@
 .icon-circle-check:before {
   content: "\e975";
 }
-.icon-box:before {
+.icon-box2:before {
   content: "\e974";
 }
 .icon-star-filled:before {
@@ -283,42 +331,6 @@
 .icon-tagcloud:before {
   content: "\e913";
 }
-.icon-external:before {
-  content: "\e97f";
-}
-.icon-group2:before {
-  content: "\e982";
-}
-.icon-crop_free:before {
-  content: "\e3c2";
-}
-.icon-add_circle:before {
-  content: "\e986";
-}
-.icon-location_searching:before {
-  content: "\e976";
-}
-.icon-settings_backup_restore:before {
-  content: "\e92f";
-}
-.icon-grid2:before {
-  content: "\e980";
-}
-.icon-list:before {
-  content: "\e97e";
-}
-.icon-square-minus:before {
-  content: "\e969";
-}
-.icon-square-plus:before {
-  content: "\e968";
-}
-.icon-search2:before {
-  content: "\e962";
-}
-.icon-plus2:before {
-  content: "\e928";
-}
 .icon-layers2:before {
   content: "\e9a3";
 }
@@ -333,6 +345,12 @@
 }
 .icon-map:before {
   content: "\ea45";
+}
+.icon-database-upload:before {
+  content: "\ea9c";
+}
+.icon-database-refresh:before {
+  content: "\ea9d";
 }
 .icon-lock4:before {
   content: "\eb53";
@@ -373,8 +391,17 @@
 .icon-square-up-right:before {
   content: "\ee05";
 }
+.icon-triangle2:before {
+  content: "\ee6b";
+}
 .icon-checkmark-circle:before {
   content: "\ee76";
+}
+.icon-stop:before {
+  content: "\e9a9";
+}
+.icon-player:before {
+  content: "\e9a9";
 }
 .icon-bookmarks:before {
   content: "\e9a1";
@@ -391,7 +418,7 @@
 .icon-pause:before {
   content: "\e926";
 }
-.icon-player:before {
+.icon-player2:before {
   content: "\e926";
 }
 .icon-hour-glass:before {
@@ -523,11 +550,14 @@
 .icon-search:before {
   content: "\e904";
 }
-.icon-document-download:before {
-  content: "\e97d";
+.icon-eye2:before {
+  content: "\e988";
 }
-.icon-document-information:before {
-  content: "\e98d";
+.icon-server:before {
+  content: "\e96b";
+}
+.icon-database:before {
+  content: "\e96b";
 }
 .icon-search3:before {
   content: "\e965";
@@ -553,14 +583,8 @@
 .icon-layout4:before {
   content: "\e903";
 }
-.icon-eye2:before {
-  content: "\e988";
-}
-.icon-server:before {
-  content: "\e96b";
-}
-.icon-database:before {
-  content: "\e96b";
+.icon-heartbeat:before {
+  content: "\e98d";
 }
 .icon-columns:before {
   content: "\e970";
@@ -589,6 +613,9 @@
 .icon-sort-down:before {
   content: "\e90c";
 }
+.icon-save:before {
+  content: "\e9aa";
+}
 .icon-google-drive:before {
   content: "\e96e";
 }
@@ -609,6 +636,9 @@
 }
 .icon-pen2:before {
   content: "\e60f";
+}
+.icon-vector:before {
+  content: "\e61a";
 }
 .icon-palette:before {
   content: "\e626";
@@ -767,7 +797,7 @@
   content: "\e977";
 }
 .icon-subtract:before {
-  content: "\e983";
+  content: "\e987";
 }
 .icon-plus-square:before {
   content: "\e98e";
