--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -24,6 +24,7 @@
     box-shadow: 10px 10px 32px -10px rgba(0,0,0,0.75);
     position: relative;
     overflow: hidden;
+    cursor: default;
 
     &.modal-appear {
       opacity: 0.01;
@@ -56,4 +57,8 @@
     border-top: $DIVIDE_BORDER;
     min-height: 20px;
   }
+}
+
+.modal-container--clickable {
+  cursor: pointer;
 }
